--- a/css/about.style.css
+++ b/css/about.style.css
@@ -27,7 +27,7 @@
   overflow: hidden !important;
 }
 .about-founder {
-  /* background-color: #545454; */
+  background-color: rgb(188, 191, 203, 0.2);
   position: relative;
   padding-bottom: 100px;
   padding-top: 30px;
@@ -79,9 +79,11 @@
 }
 
 .president-img {
-  background-size: 55%;
-  background-color: #fdfdfd;
+  /* background-size: 55%;
+  background-color: #fdfdfd; */
   padding-top: 35px;
+  width: 90%;
+  margin-left: 10%;
 }
 
 @media screen and (max-width: 1200px) {
