--- a/css/index.css
+++ b/css/index.css
@@ -289,15 +289,287 @@ header ul {
     padding-left: 15px;
     text-align: center;
 }
-.section-title h2::after{
-  content: '';
-  display: block;
-  height: 2px;
-  width: 100px;
-  background-color: #eb5757;
-  margin: 0 auto;
+
+/*Blog sluder*/
+.blog{
+  background-image: linear-gradient(120deg,#fe8605 0%,#fd3838 50%,#e6326d 75%);
 }
 
+.slider{
+  width: 95%;
+  position: relative;
+  max-width: 800px;
+  margin:auto;
+  background:#fff;
+  box-shadow: 0 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  height: 400px;
+  transition: all 0.3s;
+}
+
+@media screen and(max-width: 992px) {
+  .slider{
+    max-width: 680px;
+    height: 400px;
+  }
+}
+
+@media screen and(max-width: 768px) {
+  .slider{
+    max-width: 500px;
+    height: auto;
+    margin:180px auto;
+  }
+}
+
+@media screen and(max-width: 500px) and (min-width:992px) {
+  .slider{
+    height: 350px;
+  }
+}
+
+.slider-item{
+  display: flex;
+  align-items: center;
+}
+
+@media screen and(max-width: 768px) {
+  .slider{
+    flex-direction: column;
+  }
+}
+
+.slider-item.swiper-slide-active .slider-img img{
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+
+.slider-item.swiper-slide-active .content > * {
+  opacity: 1;
+  transform: none;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(1) {
+  transition-delay: 0.3s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(2) {
+  transition-delay: 0.4s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(3) {
+  transition-delay: 0.5s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(4) {
+  transition-delay: 0.6s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(5) {
+  transition-delay: 0.7s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(6) {
+  transition-delay: 0.8s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(7) {
+  transition-delay: 0.9s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(8) {
+  transition-delay: 1s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(9) {
+  transition-delay: 1.1s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(10) {
+  transition-delay: 1.2s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(11) {
+  transition-delay: 1.3s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(12) {
+  transition-delay: 1.4s;
+}
+
+.slider-item.swiper-slide-active .content > *:nth-child(13) {
+  transition-delay: 1.5s;
+}
+.slider-item.swiper-slide-active .content > *:nth-child(14) {
+  transition-delay: 1.6s;
+}
+.slider-item.swiper-slide-active .content > *:nth-child(15) {
+  transition-delay: 1.7s;
+}
+
+.slider-img{
+  width: 300px;
+  flex-shrink: 0;
+  height: 300px;
+  background-image: linear-gradient(120deg, #fe8a39 0%,#fd3838 74%);
+  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  border-radius: 20px;
+  transform: translateX(-80px);
+  overflow: hidden;
+}
+
+.slider-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  opacity: 0;
+  border-radius: 20px;
+  transition: all .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .slider-img{
+    transform: translateY(-50%);
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .slider-img{
+    width: 95%;
+  }
+}
+
+@media screen and (max-height: 500px) and (min-width: 992px) {
+  .slider-img{
+    height: 270px;
+  }
+}
+
+.content{
+  padding-right: 25px;
+}
+
+@media screen and (max-width:768px) {
+  .content{
+    margin-top: -80px;
+    text-align: center;
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width:576px) {
+  .content{
+    padding:0;
+  }
+}
+
+.content > * {
+  opacity: 0;
+  transform: translateY(25px);
+  transition: all 0.4s;
+}
+
+.title{
+  font-size: 24px;
+  font-weight: 700;
+  color:#0d0925;
+  margin-bottom: 20px;
+}
+
+.text {
+  color:#4e4a67;
+  margin-bottom: 30px;
+  line-height: 1.5rem;
+}
+
+.time{
+  color:#7b7992;
+  margin-bottom: 20px;
+  display: block;
+  font-weight: 500;
+}
+
+.Button{
+  display: inline-flex;
+  background-image: linear-gradient(120deg, #fe8a39 0%, #fd3838 74%);
+  padding: 15px 35px;
+  border-radius: 50px;
+  color:#fff;
+  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  text-decoration: none;
+  font-weight: 500;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
+@media screen and(max-width: 576px) {
+  .button{
+    width: 100%;
+  }
+}
+
+.slider-pagination {
+  position: absolute;
+  z-index: 21;
+  right: 20px;
+  width: 11px !important;
+  text-align: center;
+  left: auto !important;
+  top:50%;
+  bottom: auto !important;
+  transform: translateY(-50%);
+}
+
+@media screen and (max-width: 768px) {
+  .slider-pagination{
+    transform: translateX(-50%);
+    left: 50% !important;
+    top: 205px;
+    width: 100% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.slider-pagination.swiper-pagination-bullets .swiper-pagination-bullet{
+  margin:8px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .slider-pagination.swiper-pagination-bullets .swiper-pagination-bullet{
+    margin: 0 5px;
+
+  }
+}
+
+.slider-pagination .swiper-pagination-bullet{
+  width: 11px;
+  height: 11px;
+  display: block;
+  border-radius: 10px;
+  background: #062744;
+  opacity: 0.2;
+  transition: all 0.3s;
+}
+
+.slider-pagination .swiper-pagination-bullet-active{
+  opacity: 1;
+  background:#fd3838;
+  height: 30px;
+  box-shadow: 0 0 20px rgba(252, 56, 56, 0.3);
+}
+
+@media screen and (max-width: 768px){
+  .slider-pagination .swiper-pagination-bullet-active{
+    height: 11px;
+    width: 30px;
+  }
+}
 
 /*footer*/
 /* .navbar > .container,
