--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 /* Contact Us Start */
-.contact {
+.contact-us {
   background-color: #fff;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   width: 90%;
