--- a/css/service.css
+++ b/css/service.css
@@ -16,20 +16,54 @@
 }
 .hero-section-title {
   color: cadetblue;
-  margin-top: 35px;
+  margin-top: 30px;
   padding-left: 30px;
 }
 .hero-section-description {
   padding-left: 40px;
   font-size: 1.5rem;
+  margin-top: 15px;
+}
+.hero-section-description-sub {
+  padding-left: 40px;
+  font-size: 1.5rem;
+  margin-top: -7px;
 }
 .hero-course-subject {
+  margin-top: -16px;
   font-size: 1.3rem;
-  padding-left: 50px;
+  padding-left: 40px;
 }
 .hero-course-title {
   color: forestgreen;
   font-size: 2rem;
   padding-left: 10px;
   word-spacing: 10px;
+}
+
+.button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.hero-join-now-button {
+  background-color: white;
+  color: black;
+  border: 2px solid #4caf50;
+  padding: 10px 30px 10px 30px;
+  margin-left: 40px;
+}
+
+.hero-join-now-button:hover {
+  background-color: #4caf50;
+  color: white;
 }
