--- a/css/service.css
+++ b/css/service.css
@@ -3,7 +3,6 @@
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 100px;
   margin-right: calc(var(--bs-gutter-x) / -2);
   margin-left: calc(var(--bs-gutter-x) / -2);
 }
@@ -12,6 +11,7 @@
   width: 50%;
   padding-left: 50px;
   margin-left: 150px;
+  margin-top: 6rem;
   position: relative;
 }
 .hero-section-title {
@@ -22,7 +22,7 @@
 .hero-section-description {
   padding-left: 40px;
   font-size: 1.5rem;
-  margin-top: 15px;
+  margin-top: 8rem;
 }
 .hero-section-description-sub {
   padding-left: 40px;
@@ -66,4 +66,30 @@
 .hero-join-now-button:hover {
   background-color: #4caf50;
   color: white;
+}
+/* University */
+/* Experts */
+.expert-title {
+  font-size: 3rem;
+  text-align: center;
+  font-family: "-webkit-pictograph";
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-bottom: 10px;
+  color: darkcyan;
+  margin-top: 50px;
+}
+
+#bg-color {
+  background-color: #f3ebeb;
+  padding-bottom: 10px;
+}
+
+.about-img {
+  /* border-radius: 50%; */
+  height: 109px;
+  margin-left: 34%;
+}
+.owl-carousel .owl-item img {
+  width: 100% !important;
 }
