--- a/css/index.css
+++ b/css/index.css
@@ -295,7 +295,7 @@ header ul {
   background-image: linear-gradient(120deg,#fe8605 0%,#fd3838 50%,#e6326d 75%);
 }
 
-.slider{
+.blog-section .slider{
   width: 95%;
   position: relative;
   max-width: 800px;
@@ -309,14 +309,14 @@ header ul {
 }
 
 @media screen and(max-width: 992px) {
-  .slider{
+  .blog-section .slider{
     max-width: 680px;
     height: 400px;
   }
 }
 
 @media screen and(max-width: 768px) {
-  .slider{
+  .blog-section .slider{
     max-width: 500px;
     height: auto;
     margin:180px auto;
@@ -324,7 +324,7 @@ header ul {
 }
 
 @media screen and(max-width: 500px) and (min-width:992px) {
-  .slider{
+  .blog-section .slider{
     height: 350px;
   }
 }
@@ -335,7 +335,7 @@ header ul {
 }
 
 @media screen and(max-width: 768px) {
-  .slider{
+  .blog-section .slider{
     flex-direction: column;
   }
 }
@@ -570,6 +570,128 @@ header ul {
     width: 30px;
   }
 }
+
+/*logo section*/
+.client-section{
+  margin: 50px auto;
+}
+
+.slick-slide {
+  margin: 0px 20px;
+}
+
+.slick-slide img {
+  width: 100%;
+}
+
+.slick-slider
+{
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+          user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+      touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus
+{
+  outline: none;
+}
+.slick-list.dragging
+{
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+  -webkit-transform: translate3d(0, 0, 0);
+     -moz-transform: translate3d(0, 0, 0);
+      -ms-transform: translate3d(0, 0, 0);
+       -o-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+  display: table;
+  content: '';
+}
+.slick-track:after
+{
+  clear: both;
+}
+.slick-loading .slick-track
+{
+  visibility: hidden;
+}
+
+.slick-slide
+{
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+  float: right;
+}
+.slick-slide img
+{
+  display: block;
+}
+.slick-slide.slick-loading img
+{
+  display: none;
+}
+.slick-slide.dragging img
+{
+  pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+  display: block;
+}
+.slick-loading .slick-slide
+{
+  visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+  display: none;
+}
+/*Testimonial*/
+
 
 /*footer*/
 /* .navbar > .container,
