--- a/css/about.style.css
+++ b/css/about.style.css
@@ -135,6 +135,8 @@
   width: 32% !important;
 }
 
+/* Counselling */
+
 .counselling {
   padding-top: 70px;
   padding-bottom: 70px;
@@ -158,6 +160,28 @@
   font-weight: 500;
   margin-top: -20px;
 }
+.book-a-session {
+  background-color: darkred;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 43%;
+  transition-duration: 0.4s;
+  position: relative;
+  cursor: pointer;
+}
+.email-num-details {
+  position: relative;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1200px) {
   .inner-container {
     padding: 80px;
