--- a/css/service.css
+++ b/css/service.css
@@ -265,3 +265,49 @@
   padding-left: 15px;
   text-align: center;
 }
+/* Counselling */
+
+.counselling {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-color: rgb(188, 191, 203, 0.2);
+}
+
+.book-free-counselling {
+  font-size: 5rem;
+  text-align: center;
+  font-family: "SeoulHangang CEB";
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-top: 10px !important;
+  padding-bottom: 10px;
+}
+
+.counselling-description {
+  text-align: center;
+  max-width: 1000px;
+  margin-left: 150px;
+  font-weight: 500;
+  margin-top: -20px;
+}
+.book-a-session {
+  background-color: darkred;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 43%;
+  transition-duration: 0.4s;
+  position: relative;
+  cursor: pointer;
+}
+.email-num-details {
+  position: relative;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
