--- a/css/index.css
+++ b/css/index.css
@@ -270,214 +270,187 @@ header ul {
     text-align: center;
 }
 
-/*Blog sluder*/
-.blog{
-  background-image: linear-gradient(120deg,#fe8605 0%,#fd3838 50%,#e6326d 75%);
-}
-
-.blog-section .slider{
+/*Blog slider*/
+.blog-slider {
   width: 95%;
   position: relative;
   max-width: 800px;
-  margin:auto;
-  background:#fff;
-  box-shadow: 0 14px 80px rgba(34, 35, 58, 0.2);
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
   border-radius: 25px;
   height: 400px;
   transition: all 0.3s;
 }
-
-@media screen and(max-width: 992px) {
-  .blog-section .slider{
+@media screen and (max-width: 992px) {
+  .blog-slider {
     max-width: 680px;
     height: 400px;
-  }
+ }
 }
-
-@media screen and(max-width: 768px) {
-  .blog-section .slider{
-    max-width: 500px;
+@media screen and (max-width: 768px) {
+  .blog-slider {
+    min-height: 500px;
     height: auto;
-    margin:180px auto;
-  }
+    margin: 180px auto;
+ }
 }
-
-@media screen and(max-width: 500px) and (min-width:992px) {
-  .blog-section .slider{
+@media screen and (max-height: 500px) and (min-width: 992px) {
+  .blog-slider {
     height: 350px;
-  }
+ }
 }
-
-.slider-item{
+.blog-slider__item {
   display: flex;
   align-items: center;
 }
-
-@media screen and(max-width: 768px) {
-  .blog-section .slider{
+@media screen and (max-width: 768px) {
+  .blog-slider__item {
     flex-direction: column;
-  }
+ }
 }
-
-.slider-item.swiper-slide-active .slider-img img{
+.blog-slider__item.swiper-slide-active .blog-slider__img img {
   opacity: 1;
   transition-delay: 0.3s;
 }
-
-.slider-item.swiper-slide-active .content > * {
+.blog-slider__item.swiper-slide-active .blog-slider__content > * {
   opacity: 1;
   transform: none;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(1) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(1) {
   transition-delay: 0.3s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(2) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(2) {
   transition-delay: 0.4s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(3) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(3) {
   transition-delay: 0.5s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(4) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(4) {
   transition-delay: 0.6s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(5) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(5) {
   transition-delay: 0.7s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(6) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(6) {
   transition-delay: 0.8s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(7) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(7) {
   transition-delay: 0.9s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(8) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(8) {
   transition-delay: 1s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(9) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(9) {
   transition-delay: 1.1s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(10) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(10) {
   transition-delay: 1.2s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(11) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(11) {
   transition-delay: 1.3s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(12) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(12) {
   transition-delay: 1.4s;
 }
-
-.slider-item.swiper-slide-active .content > *:nth-child(13) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(13) {
   transition-delay: 1.5s;
 }
-.slider-item.swiper-slide-active .content > *:nth-child(14) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(14) {
   transition-delay: 1.6s;
 }
-.slider-item.swiper-slide-active .content > *:nth-child(15) {
+.blog-slider__item.swiper-slide-active .blog-slider__content > *:nth-child(15) {
   transition-delay: 1.7s;
 }
-
-.slider-img{
+.blog-slider__img {
   width: 300px;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(120deg, #fe8a39 0%,#fd3838 74%);
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
   box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
   border-radius: 20px;
   transform: translateX(-80px);
   overflow: hidden;
 }
-
-.slider-img img{
+.blog-slider__img:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  opacity: 0.8;
+}
+.blog-slider__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
   opacity: 0;
   border-radius: 20px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
-
 @media screen and (max-width: 768px) {
-  .slider-img{
+  .blog-slider__img {
     transform: translateY(-50%);
     width: 90%;
-  }
+ }
 }
-
 @media screen and (max-width: 576px) {
-  .slider-img{
+  .blog-slider__img {
     width: 95%;
-  }
+ }
 }
-
 @media screen and (max-height: 500px) and (min-width: 992px) {
-  .slider-img{
+  .blog-slider__img {
     height: 270px;
-  }
+ }
 }
-
-.content{
+.blog-slider__content {
   padding-right: 25px;
 }
-
-@media screen and (max-width:768px) {
-  .content{
+@media screen and (max-width: 768px) {
+  .blog-slider__content {
     margin-top: -80px;
     text-align: center;
     padding: 0 30px;
-  }
+ }
 }
-
-@media screen and (max-width:576px) {
-  .content{
-    padding:0;
-  }
+@media screen and (max-width: 576px) {
+  .blog-slider__content {
+    padding: 0;
+ }
 }
-
-.content > * {
+.blog-slider__content > * {
   opacity: 0;
   transform: translateY(25px);
   transition: all 0.4s;
 }
-
-.title{
-  font-size: 24px;
-  font-weight: 700;
-  color:#0d0925;
-  margin-bottom: 20px;
-}
-
-.text {
-  color:#4e4a67;
-  margin-bottom: 30px;
-  line-height: 1.5rem;
-}
-
-.time{
-  color:#7b7992;
-  margin-bottom: 20px;
+.blog-slider__code {
+  color: #7b7992;
+  margin-bottom: 15px;
   display: block;
   font-weight: 500;
 }
-
-.Button{
+.blog-slider__title {
+  font-size: 24px;
+  font-weight: 700;
+  color: #0d0925;
+  margin-bottom: 20px;
+}
+.blog-slider__text {
+  color: #4e4a67;
+  margin-bottom: 30px;
+  line-height: 1.5em;
+}
+.blog-slider__button {
   display: inline-flex;
-  background-image: linear-gradient(120deg, #fe8a39 0%, #fd3838 74%);
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
   padding: 15px 35px;
   border-radius: 50px;
-  color:#fff;
+  color: #fff;
   box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
   text-decoration: none;
   font-weight: 500;
@@ -485,27 +458,29 @@ header ul {
   text-align: center;
   letter-spacing: 1px;
 }
-
-@media screen and(max-width: 576px) {
-  .button{
+@media screen and (max-width: 576px) {
+  .blog-slider__button {
     width: 100%;
-  }
+ }
 }
-
-.slider-pagination {
+.blog-slider .swiper-container-horizontal > .swiper-pagination-bullets, .blog-slider .swiper-pagination-custom, .blog-slider .swiper-pagination-fraction {
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+}
+.blog-slider__pagination {
   position: absolute;
   z-index: 21;
   right: 20px;
   width: 11px !important;
   text-align: center;
   left: auto !important;
-  top:50%;
+  top: 50%;
   bottom: auto !important;
   transform: translateY(-50%);
 }
-
 @media screen and (max-width: 768px) {
-  .slider-pagination{
+  .blog-slider__pagination {
     transform: translateX(-50%);
     left: 50% !important;
     top: 205px;
@@ -513,21 +488,17 @@ header ul {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+ }
 }
-
-.slider-pagination.swiper-pagination-bullets .swiper-pagination-bullet{
-  margin:8px 0;
+.blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 8px 0;
 }
-
 @media screen and (max-width: 768px) {
-  .slider-pagination.swiper-pagination-bullets .swiper-pagination-bullet{
+  .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0 5px;
-
-  }
+ }
 }
-
-.slider-pagination .swiper-pagination-bullet{
+.blog-slider__pagination .swiper-pagination-bullet {
   width: 11px;
   height: 11px;
   display: block;
@@ -536,19 +507,17 @@ header ul {
   opacity: 0.2;
   transition: all 0.3s;
 }
-
-.slider-pagination .swiper-pagination-bullet-active{
+.blog-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
-  background:#fd3838;
+  background: #fd3838;
   height: 30px;
-  box-shadow: 0 0 20px rgba(252, 56, 56, 0.3);
+  box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
 }
-
-@media screen and (max-width: 768px){
-  .slider-pagination .swiper-pagination-bullet-active{
+@media screen and (max-width: 768px) {
+  .blog-slider__pagination .swiper-pagination-bullet-active {
     height: 11px;
     width: 30px;
-  }
+ }
 }
 
 /*logo section*/
