--- a/css/serviceDetail.css
+++ b/css/serviceDetail.css
@@ -16,8 +16,9 @@
 }
 
 .service-img{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 200px;
+    margin: 20px;
 }
 
 .service-img img{
@@ -31,15 +32,35 @@
 }
 
 .service-box{
-    margin: 0 auto;
-    background-color: white;
-    width: 100%;
-    height: 200px;
-    transition: all .3s ease;
-    border: 2px solid white;
-    display: flex;
+   padding: 32px;
+   box-shadow: 0 0 30px rgb(31 45 61 / 13%);
+   margin: 15px 0;
+   position: relative;
+   z-index: 1;
+   border-radius: 10px;
+   overflow: hidden;
+   display: flex;
 }
 
-.service-box:hover{
-    box-shadow: 0 0 20px solid white;
+.service-content{
+    margin: 20px;
+}
+
+.service-content h3{
+    font-weight: 500;
+    font-size: 34px;
+}
+
+@media (max-width:929px) {
+    .service-box{
+        flex-direction: column;
+    }
+}
+
+@media (max-width:544px) {
+    
+.service-img{
+    width: 200px;
+    height: 100px;
+}
 }
