--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,13 @@ header ul {
 .navbar-brand {
   font-size: 1.4rem;
   color: #eb5757 !important;
+  width: 50px;
+  height: 50px
+}
+
+.navbar-brand img {
+  width: 100%;
+  height: 100%;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
