--- a/css/enroll.css
+++ b/css/enroll.css
@@ -109,6 +109,11 @@
   line-height: 1.6;
   font-size: 16px;
 }
+.english-proficiency-option label {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 2;
+}
 @media (max-width: 1200px) {
   .content-right {
     margin: 1%;
