--- a/css/messagefromceo.css
+++ b/css/messagefromceo.css
@@ -203,6 +203,9 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
+#mobile-view {
+  display: none;
+}
 
 @media screen and (max-width: 1200px) {
   .inner-container {
@@ -217,6 +220,82 @@
   }
   .inner-container {
     width: 100%;
+  }
+  .hero-img-title {
+    position: absolute;
+    margin-top: -90px;
+    color: white;
+    font-size: 30px;
+    margin-left: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 7px;
+  }
+  .book-free-counselling {
+    font-size: 3rem;
+    text-align: center;
+    font-family: "SeoulHangang CEB";
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 10px !important;
+    padding-bottom: 10px;
+  }
+  .counselling-description {
+    text-align: center;
+    max-width: 1000px;
+    margin-left: 0px;
+    font-weight: 500;
+    margin-top: 10px;
+  }
+  .book-a-session {
+    background-color: darkred;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 100px;
+    transition-duration: 0.4s;
+    position: relative;
+    cursor: pointer;
+  }
+  .expert-title {
+    font-size: 3rem;
+    text-align: center;
+    font-family: "SeoulHangang CEB";
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 10px !important;
+    padding-bottom: 10px;
+  }
+  .container,
+  .container-fluid,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    width: 100%;
+    padding-right: none;
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+  }
+  #mobile-view {
+    display: block;
+  }
+  #desktop-view {
+    display: none;
+  }
+  .president-img {
+    padding-top: 0px;
+    width: 100%;
+    margin-left: 0%;
+    height: 60vh;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
