making service page responsive

--- a/css/service.css
+++ b/css/service.css
@@ -311,3 +311,106 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
+
+@media screen and (max-width: 1200px) {
+}
+
+@media screen and (max-width: 1000px) {
+  .hero-img {
+    height: auto;
+    width: 100%;
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-top: 6rem;
+    position: relative;
+  }
+  .hero-section-description {
+    padding-left: 0px;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    margin-left: 30px;
+    text-align: left;
+    margin-bottom: 1px;
+  }
+  .hero-section-description-sub {
+    padding-left: 30px;
+    font-size: 1.5rem;
+    margin-top: 10px;
+  }
+  .hero-course-subject {
+    margin-top: 0px;
+    font-size: 1.2rem;
+    padding-left: 30px;
+  }
+  .hero-course-title {
+    color: forestgreen;
+    font-size: 1.4rem;
+    padding-left: 10px;
+    word-spacing: 10px;
+  }
+
+  .button {
+    background-color: #4caf50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .hero-join-now-button {
+    background-color: white;
+    color: black;
+    border: 2px solid #4caf50;
+    padding: 10px 30px 10px 30px;
+    margin-left: 30%;
+  }
+  .course-col {
+    float: left;
+    width: 100%;
+    padding: 10px;
+  }
+  .course-description {
+    float: left;
+    width: 100%;
+    padding: 10px;
+  }
+  .book-free-counselling {
+    font-size: 3rem;
+    text-align: center;
+    font-family: "SeoulHangang CEB";
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 10px !important;
+    padding-bottom: 10px;
+  }
+  .counselling-description {
+    text-align: center;
+    max-width: 1000px;
+    margin-left: 0px;
+    font-weight: 500;
+    margin-top: 10px;
+  }
+  .book-a-session {
+    background-color: darkred;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 100px;
+    transition-duration: 0.4s;
+    position: relative;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+}
