--- a/backend/AU/templates/pages/index.html
+++ b/backend/AU/templates/pages/index.html
@@ -1,1 +1,77 @@
-<h1>Check</h1>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<!---Hero slider-->
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'img/img1.jpg' %}" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated bounceInRight" style="animation-delay:1s">Creative Agency</h2>
+          <p class="animated bounceInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/img2.jpg' %}" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated slideInDown" style="animation-delay: 1s">Reputed Worldwide</h2>
+          <p class="animated fadeInUp" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated zoomIn" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/img3.jpg' %}" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated zoomIn" style="animation-delay: 1s">Multiple Awards</h2>
+          <p class="animated fadeInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated zoomIn"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!--Counter Section-->
+  <section class="counter-section">
+    <div class="container">
+      <div class="fact-box">
+        <div class="row">
+          <div class="col-lg single-fact">
+            <i class="fa fa-university fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">200</h2>
+            <p>Affiliated University</p>
+          </div>
+          <div class="col-lg single-fact">
+            <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>Graduated</p>
+          </div>
+          <div class="col-lg single-fact">
+            <i class="fa fa-shield fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>People applied successfully</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+{% endblock %}
